# Space-Menu

./: .gitignore  .gitignore.txt  CMakeLists.txt  CMakeSettings.json  README.md  RECOVER_hearts.fla  RECOVER_icon.fla  SM_FullLogo.kra  about.md  hearts.fla  icon.fla  mod.json
.github/workflows/: main.yml
res/fonts-fixed/: Montserrat-Medium-hd.fnt  Montserrat-Medium-uhd.fnt  Montserrat-Medium.fnt
res/hearts/: I'll use these one day.txt
res/sheets/: SM_Sheet01.plist
src/: HackFunctions.cpp  hackFunctions.cpp  main.cpp
src/data/: SMRandomData.hpp
src/hacks/: HackManager.hpp  HackTemplate.hpp  Hacks.h  hack.hpp  hacks.h  hacks.hpp  includeHacks.h
src/hacks/player/: Noclip.hpp  NoclipFlashOnDeath.hpp  noclip.hpp  testHack2.hpp
src/interface/: ModMenu.hpp  SMButton.h  SMMenu.h  SMMenu.hpp  SMRandomData.h  SMRandomData.hpp  mod_menu.hpp  sm_layer.hpp
src/util/: UsefulRenames.h
src/utils/: UsefulRenames.h
